--- a/application-dev.yml
+++ b/application-dev.yml
@@ -103,7 +103,7 @@ swagger:
 ## spring security 配置
 security:
   auth:
-    server: http://localhost:9999/auth/oauth
+    server: http://127.0.0.1:9999/auth/oauth
   oauth2:
     resource:
       token-info-uri: ${security.auth.server}/check_token
