--- a/scf-demo-dev.yml
+++ b/scf-demo-dev.yml
@@ -14,14 +14,14 @@ spring:
     show-sql: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:oracle:thin:@192.168.10.200:1521:XE
+    url: jdbc:oracle:thin:@127.0.0.1:1521:ORCL
     driver-class-name: oracle.jdbc.OracleDriver
     username: scf
     password: 123456
   jms:
     pub-sub-domain: true
   activemq:
-    broker-url: tcp://192.168.10.200:61616
+    broker-url: tcp://127.0.0.1:61616
     user: admin
     password: admin
     in-memory: false
