--- a/scf-upms-dev.yml
+++ b/scf-upms-dev.yml
@@ -23,7 +23,7 @@ spring:
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:oracle:thin:@192.168.10.200:1521:XE
+    url: jdbc:oracle:thin:@127.0.0.1:1521:ORCL
     driver-class-name: oracle.jdbc.OracleDriver
     username: scf
     password: 123456
