--- a/application-dev.yml
+++ b/application-dev.yml
@@ -4,9 +4,9 @@ jasypt:
     password: scf #根密码
 # redis 相关
 spring:
-  redis:
-    password: redisgdmsa790
-    host: 127.0.0.1
+#  redis:
+#    password: redisgdmsa790
+#   host: 127.0.0.1
 
   rabbitmq:
     host: 127.0.0.1
